[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "sds200"
version = "0.6.0"
description = "Python USB and Ethernet control library for the Uniden SDS200 scanner"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Steven Boyd" }
]
keywords = [
  "radio",
  "scanner",
  "sds200",
  "serial",
  "udp",
  "uniden",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications :: Ham Radio",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "argcomplete>=3.6,<4",
  "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "twine>=6.0",
  "types-pyserial>=3.5.0.20250326",
]

[project.urls]
Homepage = "https://github.com/stevenboyd78/sds200-python"
Repository = "https://github.com/stevenboyd78/sds200-python"
Issues = "https://github.com/stevenboyd78/sds200-python/issues"
Changelog = "https://github.com/stevenboyd78/sds200-python/blob/main/CHANGELOG.md"

[project.scripts]
sds200 = "sds200.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sds200"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["sds200"]
mypy_path = "src"
